# ripperx4

./: COMPARISON.md  Cargo.toml  Dockerfile  README.md  build.rs  ripperX4.cmb  ripperx4.gresource.xml  ripperx4.ui
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: audit.yml  rust-linux.yml  rust-macos.yml  rust.yml
content/: ripperx4.gresource.xml  ripperx4.ui
resources/test/: direstraits-disc-metadata.xml  direstraits-releases-metadata.xml
src/: cdtext.rs  data.rs  gnudb.rs  main.rs  metadata.rs  musicbrainz.rs  paranoia.rs  ripper.rs  ripperX4.cmb  ripperx4.ui  ui.rs  util.rs
tests/: resources.rs
