[package]
name = "ripperx4"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
home = "0.5"
glib = "0.17"
gtk = { version = "0.6", package = "gtk4", features = ["v4_8"] }
gstreamer = "0.20"
discid = "0.5"
confy = "0.5"
serde = { version = "1.0", features = ["derive"] }
ureq = "2.6.2"
minidom = "0.15"
log = "0.4"
simplelog = "0.12"

[dev-dependencies]
serial_test = "2.0.0"

[build-dependencies]
glib-build-tools = "0.17.0"
