[package]
name = "ripperx4"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
description = "A CD ripper and encoder written in Rust"
authors = ["Jos Dehaes"]
readme = "README.md"

[package.metadata.arch]
arch = ["x86_64", "aarch64"]

[dependencies]
anyhow = "1.0"
async-channel = "2.1"
confy = "2.0"
discid = "0.7"
musicbrainz_rs = { version = "0.12", default-features = false, features = [
  "blocking",
] }
glib = "0.21"
gstreamer = "0.24"
libcdio-sys = "0.5"
gtk = { package = "gtk4", version = "0.10", features = ["v4_8"] }
home = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"
gnudb = "0.4"

[dev-dependencies]

[build-dependencies]
glib-build-tools = "0.21"
